Fix related blog post author image in dark mode

--- a/wagtailio/static/sass/components/_logo-card.scss
+++ b/wagtailio/static/sass/components/_logo-card.scss
@@ -71,5 +71,9 @@
             padding: 10px 20px;
             background-color: $color--white;
         }
+
+        #{$root}__author-wrap #{$root}__image {
+            padding: 0;
+        }
     }
 }
